<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeopleSync</string>
    <string name="account_name">PeopleSync Client</string>
    <string name="addressbook_account_name">PeopleSync Addressbook</string>
    
    <string name="title_main">Home</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_add_account">Add new account</string>
    <string name="title_help">Help</string>
    <string name="title_info">Info</string>

    <string name="label_autoConfig">Auto Config</string>
    <string name="label_addAccount">Add account</string>
    <string name="label_deleteAccount">Delete account</string>
    <string name="label_help">Help</string>
    <string name="label_info">Info</string>
    <string name="label_noAccounts">Please use the buttons in the top bar to add a CardDAV account to the PeopleSync Client App.</string>
    <string name="label_noAddressBooks">No address books synced</string>
    <string name="label_selectExisting">Select an existing email account</string>
    <string name="label_enterEmail">Enter an email address or username</string>
    <string name="label_enterPassword">Enter password</string>
    <string name="label_enterPasswordConfirm">Confirm password</string>
    <string name="label_ok">OK</string>
    <string name="label_failure">Failure</string>
    <string name="label_back">Back</string>
    <string name="label_next">Next</string>
    <string name="label_queryingServer">Querying server. Please wait…</string>
    
    <string name="label_accountName">Account name:</string>
    <string name="label_serverName">Server name:</string>
    <string name="label_useSSL">Use ssl</string>
    <string name="label_reset">Reset</string>
    <string name="label_userName">User name:</string>
    <string name="label_password">Password:</string>
    <string name="label_passwordConfirm">Confirm:</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    
    <string name="html_info"><![CDATA[
       	<h1>Imprint / Legal</h1>
        <h2>License</h2>
        <p>Copyright (c) 2014 by messageconcept GmbH. All rights reserved.</p>
        <blockquote>
        	messageconcept GmbH<br />
			Gesellschaft fuer IT-Marketing<br />
			Grosse Witschgasse 17<br />
			50676 Cologne, Germany<br />
			Phone +49 221 677855 88 (no app support!)<br />
		</blockquote>
		<p>This program and the accompanying materials are made available under the terms of the <a href="http://www.gnu.org/licenses/gpl.html" >GNU Public License v3.0</a> which accompanies this distribution. As far as Google Play or Samsung Store Store require other terms, the respective terms apply for versions that are downloaded via these services. The app source code has been published according to the license in Github.</p>
        <h2>Used third-party libraries and codes</h2>
        <table>
        	<tr>
        		<td><a href="http://www.bitfire.at/">DAVdroid</a></td>
        		<td><a href="https://www.gnu.org/copyleft/gpl.html">GNU Public License v3.0</a></td>
        	</tr>
        	<tr>
        		<td><a href="http://ical4j.sourceforge.net/">iCal4j</a></td>
        		<td><a href="http://sourceforge.net/p/ical4j/ical4j/ci/default/tree/LICENSE">New BSD License</a></td>
        	</tr>
        	<tr>
        		<td><a href="https://code.google.com/p/ez-vcard/">ez-vcard</a></td>
        		<td><a href="http://opensource.org/licenses/BSD-3-Clause">New BSD License</a></td>
        	</tr>
        	<tr>
        		<td><a href="http://simple.sourceforge.net/">Simple XML Serialization</a></td>
        		<td><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
        	</td></tr>
        	<tr><td><a href="http://projectlombok.org/">Project Lombok</a></td><td><a href="http://opensource.org/licenses/mit-license.php">MIT License</a></td></tr>
        </table>
        ]]>
	</string>
	<string name="html_help_general"><![CDATA[
       	<h1>About PeopleSync App</h1>
        <p>If you have questions regarding this free app, please follow us in Twitter <a href="http://twitter.com/messageconcept">@messageconcept</a> or like us in <a href="http://facebook.com/messageconcept">facebook.com/messageconcept</a>. Support by phone or email is not available.
			PeopleSync App is an Android 4+ sync adapter for CardDAV. It was built as a client for the messageconcept PeopleSync CardDAV server, but also works with 3rd party servers.
			<b>Please note:</b> As a business client the app does not allow the selection of individual address books or calendars to synchronize. This selection is made on server side by your systems administrator by setting per-user permissions in the PeopleSync server. If you need to alter individual settings on client side, please switch to one of the 3rd party apps, available in your application store.
			These are the most important buttons in the app:
		</p>
        ]]>
	</string>
    <string name="help_autoConfig">Automatically adds PeopleSync accounts for all existing mail accounts on the device. The default server config is set by your systems administrator. This function requires a PeopleSync server.</string>
    <string name="help_addAccount">Adds a new PeopleSync account. You are able to retrieve the default settings for your email address, if you configure a PeopleSync server. Alternatively, you can enter manual settings for account.</string>
    <string name="help_deleteAccount">Removes the current PeopleSync account settings from your device.</string>
    <string name="help_reset">Resets server config to the default settings for your PeopleSync server. The default settings are set by your systems administrator. This function requires a PeopleSync server.</string>
    <string name="help_save">Closes the dialog with saving your changes.</string>
    <string name="help_cancel">Cancels the dialog and discards your changes.</string>
    <string name="help_cyanogenMod">If you use CyanogenMod, &quot;Privacy Guard&quot; must be disabled for the PeopleSync App. Otherwise, the app is not allowed to access and synchronize your contacts and events.</string>
    
    <string name="invalid_base_url">Invalid base URL: </string>
    <string name="exception_io">I/O error: %s</string>
    <string name="exception_uri_syntax">Invalid URI: %s</string>
    <string name="exception_incapable_resource">Missing capabilities: %s</string>
    <string name="no_carddav">No CardDAV available</string>
    <string name="error_principal_path">"Couldn't determine principal path (RFC 5397)"</string>
    <string name="error_home_set_address_books">"Couldn't determine address book home set"</string>
    <string name="error_home_set_calendars">"Couldn't determine calendar home set"</string>
	<string name="exception_http">HTTP error: %s</string>
	<string name="exception_unauthorized">Failed to authorize: Please check username, password and server name.</string>
	<string name="error_account_name_exists">Account name exists already.</string>
</resources>
