<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff" >
        
    <ScrollView 
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="8"
            android:useDefaultMargins="true"
            android:padding="10dp"
            >
            <WebView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
	       	    android:id="@+id/txtHelp"
	       	    android:layout_width="wrap_content"
	       	    android:layout_height="wrap_content"
	       	    android:padding="10dp" />
            
            <ImageView 
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/auto_config"
                android:contentDescription="@string/label_autoConfig" />
            <TextView 
                android:layout_row="1"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/help_autoConfig" />
            
            <ImageView 
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_new_account"
                android:contentDescription="@string/label_addAccount" />
            <TextView 
                android:layout_row="2"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/help_addAccount" />
        	
        	<ImageView 
                android:layout_row="3"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/delete"
                android:contentDescription="@string/label_deleteAccount" />
            <TextView 
                android:layout_row="3"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/help_deleteAccount" />
        	
            <ImageView 
                android:layout_row="4"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/reset"
                android:contentDescription="@string/label_reset" />
            <TextView 
                android:layout_row="4"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/help_reset" />

            <ImageView 
                android:layout_row="5"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/navigation_accept"
                android:contentDescription="@string/label_save" />
            <TextView 
                android:layout_row="5"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/help_save" />
            
            <ImageView 
                android:layout_row="6"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/cancel"
                android:contentDescription="@string/label_cancel" />
            <TextView 
                android:layout_row="6"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/help_cancel" />
            
            <TextView 
                android:layout_row="7"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_width="0dp"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/help_cyanogenMod" />
            </GridLayout>
    </ScrollView>
 	
 	<ImageView
 	    android:id="@+id/footer"
 	    android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#005bbb"
        android:src="@drawable/advert"
        android:contentDescription="@string/app_name"
        android:onClick="showWebsite" />

</RelativeLayout>
