<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		<GridLayout
		    android:background="@drawable/section_background"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:useDefaultMargins="true"
		    android:columnCount="3"
		    android:rowCount="7" >
		    
		    <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_column="0"
	            android:layout_gravity="left"
	            android:layout_row="0"
	            android:text="@string/label_accountName" />
			<EditText
			    android:id="@+id/edit_account_name"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="fill_horizontal"
			    android:layout_column="1"
			    android:layout_columnSpan="2"
			    android:layout_row="0"
			    android:inputType="text" />
			
			<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_column="0"
	            android:layout_gravity="left"
	            android:layout_row="1"
	            android:text="@string/label_serverName" />
			<EditText 
			    android:id="@+id/edit_server_name"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="fill_horizontal"
			    android:layout_row="1"
			    android:layout_column="1"
			    android:inputType="textUri" />
			<ImageView 
	            android:id="@+id/serverNameOK"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/label_ok"
	            android:layout_row="1"
	            android:layout_column="2"
	            android:src="@drawable/ok"
	            android:layout_gravity="center_vertical" />
			
			<RelativeLayout 
			    android:layout_width="0dp"
				android:layout_gravity="fill_horizontal"
			    android:layout_height="wrap_content"
			    android:layout_row="2"
			    android:layout_column="1" >
				<CheckBox 
				    android:id="@+id/check_ssl"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/label_useSSL"
				    android:checked="true"
				    android:layout_alignParentLeft="true" />
				<ImageButton 
				    android:id="@+id/btn_reset"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:src="@drawable/reset"
				    android:contentDescription="@string/label_reset"
				    android:padding="0dp"
				    android:layout_margin="10dp"
				    android:layout_alignParentRight="true" />
				<TextView 
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_below="@id/btn_reset"
				    android:layout_alignLeft="@id/btn_reset"
				    android:layout_alignRight="@id/btn_reset"
				    android:text="@string/label_reset"
				    android:textSize="12sp"
				    android:gravity="center_horizontal"
				    android:maxLines="1" />
			</RelativeLayout>
			   
			<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_column="0"
	            android:layout_gravity="left"
	            android:layout_row="3"
	            android:text="@string/label_userName" />
			<EditText 
			    android:id="@+id/edit_username"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="fill_horizontal"
			    android:layout_row="3"
			    android:layout_column="1"
			    android:layout_columnSpan="2"
			    android:inputType="text" />
			    
			<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_column="0"
	            android:layout_gravity="left"
	            android:layout_row="4"
	            android:text="@string/label_password" />
			<EditText 
				android:id="@+id/edit_pass"
				android:inputType="textPassword"
				android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="fill_horizontal"
				android:layout_row="4"
				android:layout_column="1" />
			<ImageView 
	            android:id="@+id/passOK"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/label_ok"
	            android:layout_row="4"
	            android:layout_column="2"
	            android:src="@drawable/ok"
	            android:layout_gravity="center_vertical" />
			
			<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_column="0"
	            android:layout_gravity="left"
	            android:layout_row="5"
	            android:text="@string/label_passwordConfirm" />
			<EditText 
				android:id="@+id/edit_pass_confirm"
				android:inputType="textPassword"
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="fill_horizontal"
				android:layout_row="5"
				android:layout_column="1" />
			<ImageView 
	            android:id="@+id/passConfirmOK"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/label_ok"
	            android:layout_row="5"
	            android:layout_column="2"
	            android:src="@drawable/ok"
	            android:layout_gravity="center_vertical" />
		</GridLayout>
		
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
			<ImageButton 
			    android:id="@+id/btn_save"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/navigation_accept"
			    android:contentDescription="@string/label_save"
			    android:padding="0dp"
			    android:layout_margin="10dp"
			    android:layout_alignParentLeft="true" />
			<TextView 
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/btn_save"
			    android:layout_alignLeft="@id/btn_save"
			    android:layout_alignRight="@id/btn_save"
			    android:text="@string/label_save"
			    android:textSize="12sp"
			    android:gravity="center_horizontal"
			    android:maxLines="1" />
			
			<ImageButton 
			    android:id="@+id/btn_cancel"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/cancel"
			    android:contentDescription="@string/label_save"
			    android:padding="0dp"
			    android:layout_margin="10dp"
			    android:layout_toRightOf="@id/btn_save" />
			<TextView 
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/btn_cancel"
			    android:layout_alignLeft="@id/btn_cancel"
			    android:layout_alignRight="@id/btn_cancel"
			    android:text="@string/label_cancel"
			    android:textSize="12sp"
			    android:gravity="center_horizontal"
			    android:maxLines="1" />
		</RelativeLayout>
	</LinearLayout>
</ScrollView>